se arreglo el error

--- a/formulario.html
+++ b/formulario.html
@@ -47,19 +47,19 @@
 <div class="container mt-4" id="fomuuu">
   <form class="row g-3">
     <div class="col-md-6">
-      <label D9D9D9 for="inputName" class="form-label">Ingrea tu nombre</label>
+      <label D9D9D9 for="inputName" class="form-label">Ingresa tu nombre</label>
       <input type="text" class="form-control" id="inputName" required>
     </div>
     <div class="col-md-6">
-      <label for="inputLastName" class="form-label">Ingrea tu apellido</label>
+      <label for="inputLastName" class="form-label">Ingresa tu apellido</label>
       <input type="text" class="form-control" id="inputLastName"required>
     </div>
     <div class="col-md-6">
-      <label for="inputEmail2" class="form-label">Ingrea tu email</label>
+      <label for="inputEmail2" class="form-label">Ingresa tu email</label>
       <input type="email" class="form-control" id="inputEmail2" required>
     </div>
     <div class="col-md-6">
-      <label for="inputPhone" class="form-label">Ingrea tu celular</label>
+      <label for="inputPhone" class="form-label">Ingresa tu celular</label>
       <input type="number" class="form-control" id="inputPhone" required>
     </div>
     <div class="col-12">
@@ -112,7 +112,7 @@
           <li><a href="#"><img src="./img/redes/linkedin.png" alt="LinkedIn"></a></li>
         </ul>
         <div class="container text-center mt-3">
-          <p>&copy; 2023 Cadus. Todos los derechos reservados.</p>
+          <p>&copy; 2023 Todos los derechos reservados a Cadus.</p>
         </div>
       </div>
     </div>
