--- a/formulario.html
+++ b/formulario.html
@@ -25,12 +25,12 @@
     </button>
     <div class="navbar-collapse justify-content-end menucito collapse" id="navbarNav">
       <ul class="navbar-nav">
-        <li class="nav-item"><a class="nav-link" href="#">Inicio</a></li>
-        <li class="nav-item"><a class="nav-link" href="#">Trabajos</a></li>
-        <li class="nav-item"><a class="nav-link" href="#">Clientes</a></li>
-        <li class="nav-item"><a class="nav-link" href="#">Servicios</a></li>
-        <li class="nav-item"><a class="nav-link" href="#">Preguntas Frecuentes</a></li>
-        <li class="nav-item"><a class="nav-link" href="#">Contacto</a></li>
+        <li class="nav-item"><a class="nav-link" href="./index.html">Inicio</a></li>
+        <li class="nav-item"><a class="nav-link" href="./trabajos.html">Trabajos</a></li>
+        <li class="nav-item"><a class="nav-link" href="./empresas.html">Clientes</a></li>
+        <li class="nav-item"><a class="nav-link" href="./nuestro.html">Servicios</a></li>
+        <li class="nav-item"><a class="nav-link" href="./">Preguntas Frecuentes</a></li>
+        <li class="nav-item"><a class="nav-link" href="./formulario.html">Contacto</a></li>
       </ul>
     </div>
   </div>
