--- a/empresas.html
+++ b/empresas.html
@@ -13,27 +13,27 @@
 <body id="bodyy">
 
   <!-- Barra de navegación -->
-  <nav class="navbar navbar-expand-lg navbar-light fixed">
-    <div class="container">
-      <a class="navbar-brand" href="#">
-        <img src="./img/logo/loguito.png" alt="" srcset="">
-      </a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="navbar-collapse justify-content-end menucito collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item"><a class="nav-link" href="./index.html">Inicio</a></li>
-          <li class="nav-item"><a class="nav-link" href="./trabajos.html">Trabajos</a></li>
-          <li class="nav-item"><a class="nav-link" href="./empresas.html">Clientes</a></li>
-          <li class="nav-item"><a class="nav-link" href="./nuestro.html">Servicios</a></li>
-          <li class="nav-item"><a class="nav-link" href="./">Preguntas Frecuentes</a></li>
-          <li class="nav-item"><a class="nav-link" href="./formulario.html">Contacto</a></li>
-        </ul>
-      </div>
+<nav class="navbar navbar-expand-lg navbar-light fixed">
+  <div class="container">
+    <a class="navbar-brand" href="#">
+      <img src="./img/logo/loguito.png" alt="" srcset="">
+    </a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="navbar-collapse justify-content-end menucito collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item"><a class="nav-link" href="./index.html">Inicio</a></li>
+        <li class="nav-item"><a class="nav-link" href="./trabajos.html">Trabajos</a></li>
+        <li class="nav-item"><a class="nav-link" href="./empresas.html">Clientes</a></li>
+        <li class="nav-item"><a class="nav-link" href="./nuestro.html">Servicios</a></li>
+        <li class="nav-item"><a class="nav-link" href="./">Preguntas Frecuentes</a></li>
+        <li class="nav-item"><a class="nav-link" href="./formulario.html">Contacto</a></li>
+      </ul>
     </div>
-  </nav>
-  
+  </div>
+</nav>
+
 
   <section class="container">
     <div class="row">
@@ -45,44 +45,44 @@
     </div>
   </section>
 
-  <section class="container galeria pt-4 pb-5">
+  <section class="container galeriaa pt-4 pb-5">
     <div class="row">
-      <div class="col-md-2 col-sm-12">
-        <img src="./img/empresas/fravega.png" id="imgrevelde" class="img-fluid" alt="fravega">
+      <div class="col-md-2 col-sm-12 pt-3">
+        <img src="./img/empresas/fravega.png" id="imgrevelde1" class="img-fluid" alt="fravega">
       </div>
-      <div class="col-md-2 col-sm-12">
-        <img src="./img/empresas/fallabella.png" id="imgrevelde" class="img-fluid" alt="fallabella">
+      <div class="col-md-2 col-sm-12 pt-3">
+        <img src="./img/empresas/fallabella.png" id="imgrevelde2 class="img-fluid" alt="fallabella">
       </div>
-      <div class="col-md-2 col-sm-12">
-        <img src="./img/empresas/vialidad.png" class="img-fluid" alt="vialidad">
+      <div class="col-md-2 col-sm-12 pt-3">
+        <img src="./img/empresas//gobierno.png" class="img-fluid" id="imgrevelde3" alt="gobierno">
       </div>
-      <div class="col-md-2 col-sm-12">
+      <div class="col-md-2 col-sm-12 pt-3">
         <img src="./img/empresas/dia.png" class="img-fluid" alt="dia">
       </div>
-      <div class="col-md-2 col-sm-12">
-        <img src="./img/empresas//gobierno.png" class="img-fluid" id="imgrevelde" alt="gobierno">
-      </div>
-      <div class="col-md-2 col-sm-12">
+      <div class="col-md-2 col-sm-12 pt-3">
         <img src="./img/empresas/banco.png" class="img-fluid" alt="banco">
+      </div>
+      <div class="col-md-2 col-sm-12 pt-3">
+        <img src="./img/empresas/vialidad.png" class="img-fluid" alt="vialidad">
       </div>
       </div>
     <div class="row">
-      <div class="col-md-2">
-        <img src="./img/empresas/shell.png" id="imgrevelde"  class="img-fluid" alt="shell">
+      <div class="col-md-2 col-sm-12 pt-3">
+        <img src="./img/empresas/shell.png" id="imgrevelde4"  class="img-fluid" alt="shell">
       </div>
-      <div class="col-md-2">
+      <div class="col-md-2  col-sm-12 pt-3">
         <img src="./img/empresas/kfc.png" class="img-fluid" alt="kfc">
       </div>
-      <div class="col-md-2">
+      <div class="col-md-2  col-sm-12 pt-3">
         <img src="./img/empresas/jumbo.png" class="img-fluid" alt="jumbo">
       </div>
-      <div class="col-md-2">
+      <div class="col-md-2  col-sm-12 pt-3">
         <img src="./img/empresas/burger.png" class="img-fluid" alt="burger">
       </div>
-      <div class="col-md-2">
+      <div class="col-md-2  col-sm-12 pt-3">
         <img src="./img/empresas/vialidad2.png" class="img-fluid" alt="vialidad2">
       </div>
-      <div class="col-md-2">
+      <div class="col-md-2  col-sm-12 pt-3">
         <img src="./img/empresas/good.png" class="img-fluid" alt="good">
       </div>
     </div>
