--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="stylesheet" href="./css/style.css">
+  <link rel="stylesheet" href="./css/principal.css">
   <title>CADUS S.A</title>
   <!-- Enlace a Bootstrap CSS -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -12,44 +12,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@200&family=Noto+Sans+JP:wght@500&display=swap" rel="stylesheet">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 <link rel="shortcut icon" href="./img/logo/loguito.png" type="image/x-icon">
-<style>
-  #hover:hover {
-          box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-          transform: scale(1.05);
-        }
 
-        .card-body {
-          border-radius: 50px;
-          color: white;
-          position: absolute;
-          background-color: rgba(0 0 0/50%);
-          width: 100%;
-          height: 16%;
-          overflow: hidden;
-          transition: 02s;
-        }
-
-        .card-body:hover {
-          height: 100%;
-          transition: 0.7s;
-        }
-
-        #titulo {
-          font-family: 'K2D', sans-serif;
-          text-align: center;
-          font-size: 35px;
-          font-weight: 400;
-          padding: 5px;
-          margin-bottom: 20px;
-        }
-
-        #texto,
-        ul {
-          font-family: 'Montserrat', sans-serif;
-          text-align: left;
-          font-size: 20px;
-        }
-</style>
 </head>
 <body id="bodyy">
 
@@ -80,74 +43,61 @@
       <div class="d-flex justify-content-center align-items-center h-100">
         <div class="text-white">
           <h1 class="hero-title">Bienvenido a Cadus</h1>
-        <p class="hero-description">Somos una empresa Constructora</p>
+        <p class="hero-description">Somos una empresa constructora</p>
       </div>
 
     </div>
   </section>
 
     <!-- tarjetas -->
-    <div class="container" style="margin-top: 70px;">
-      <div class="row">
-        <div class="col-md-4">
-          <div class="card" id="hover" style="border-radius: 50px;">
-  
-            <img src="./img/principal/quienes somos.jpg" alt="quienes somos" class="img-fluid" style="border-radius: 50px;">
-  
-            <div class="card-body">
-              <h2 class="card-title" id="titulo">Quienes Somos </h2>
-              <p class="card-text" id="texto">Somos una empresa constructora de sólida trayectoria y experiencia, con
-                un
-                equipo
-                profesional plenamente comprometido con el cumplimiento y capaz de brindar múltiples soluciones en
-                forma
-                rápida, creativa y eficaz</p>
-  
-            </div>
+  <div class="container mt-4">
+    <div class="row">
+
+      <div class="col-md-4 mb-4">
+        <div class="card" id="hover">
+          <img src="./img/principal/quienes somos.jpg" alt="quienes somos" class="img-fluid">
+          <div class="card-body">
+            <h2 class="card-title" id="titulo">Quienes Somos</h2>
+            <ul class="card-text" id="rebelde">
+              <li>Somos una empresa constructora de sólida trayectoria y experiencia</li>
+              <li>con un equipo profesional plenamente comprometido con el cumplimiento</li>
+              <li>capaz de brindar múltiples soluciones en forma rápida, creativa y eficaz.</li>
+            </ul>
+            
           </div>
         </div>
-  
-        <div class="col-md-4">
-          <div class="card" id="hover" style="border-radius: 50px;">
-  
-            <img src="./img/principal/que hacemos.jpg" alt="que hacemos" class="img-fluid" style="border-radius: 50px;">
-  
-            <div class="card-body">
-              <h2 class="card-title" id="titulo"> Que Hacemos </h2>
-              <p class="card-text" id="texto">
-              <ul>
-                <li>Optimizamos tus espacios e incrementamos tu bienestar.</li>
-                <li>Creamos espacios excepcionales e inspiradores para nuestros clientes.</li>
-                <li>Construimos tus sueños cumpliendo en tiempo y forma.</li>
-                <li>Suministramos y desarrollamos el mobiliario a tu medida.</li>
-                <li>Nos adaptamos a las exigencias del mercado.</li>
-              </ul>
-              </p>
-  
-            </div>
+      </div>
+      <div class="col-md-4 mb-4">
+        <div class="card" id="hover">
+          <img src="./img/principal/que hacemos.jpg" alt="que hacemos" class="img-fluid">
+          <div class="card-body">
+            <h2 class="card-title" id="titulo">Que Hacemos</h2>
+            <ul class="card-text" id="textoo">
+              <li>Optimizamos tus espacios e incrementamos tu bienestar.</li>
+              <li>Creamos espacios excepcionales e inspiradores para nuestros clientes.</li>
+              <li>Construimos tus sueños cumpliendo en tiempo y forma.</li>
+              <li>Suministramos y desarrollamos el mobiliario a tu medida.</li>
+              <li>Nos adaptamos a las exigencias del mercado.</li>
+            </ul>
           </div>
         </div>
-  
-        <div class="col-md-4">
-          <div class="card" id="hover" style="border-radius: 50px;">
-  
-  
-            <img src="img/principal/objetivos.jpg"objetivos" class="img-fluid" style="border-radius: 50px;">
-  
-            <div class="card-body">
-              <h2 class="card-title" id="titulo">Objetivos </h2>
-              <p class="card-text" id="texto">
-              <ul>
-                <li>Crear estructuras seguras y duradras.</li>
-                <li>Generar beneficios económicos.</li>
-                <li>Satisfacer al cliente</li>
-                <li>Tener un equipo de trabao capacitado y herramientas de alta calidad.</li>
-              </ul>
-              </p>
-  
-            </div>
+      </div>
+      <div class="col-md-4 mb-4">
+        <div class="card" id="hover">
+          <img src="./img/principal/objetivos.jpg" alt="objetivos">
+          <div class="card-body">
+            <h2 class="card-title" id="titulo">Objetivos</h2>
+            <ul class="card-text" id="textoo">
+              <li>Crear estructuras seguras y duraderas.</li>
+              <li>Generar beneficios económicos.</li>
+              <li>Satisfacer al cliente.</li>
+              <li>Tener un equipo de trabajo capacitado y herramientas de alta calidad.</li>
+            </ul>
           </div>
         </div>
+      </div>
+    </div>
+  </div>
 
 
         <footer class="footer">
