cambios en el head navbar

--- a/trabajos.html
+++ b/trabajos.html
@@ -2,10 +2,12 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
+  <link rel="shortcut icon" href="./img/logo/loguito.png" type="image/x-icon">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="stylesheet" href="./css/style.css">
-  <title>Tu Sitio Web</title>
+  <title>Trabajos</title>
   <!-- Enlace a Bootstrap CSS -->
+  <link rel="shortcut icon" href="./img/logo/loguito.png" type="image/x-icon">
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@200&family=Noto+Sans+JP:wght@500&display=swap" rel="stylesheet">
@@ -24,16 +26,17 @@
     </button>
     <div class="navbar-collapse justify-content-end menucito collapse" id="navbarNav">
       <ul class="navbar-nav">
-        <li class="nav-item"><a class="nav-link" href="#">Inicio</a></li>
-        <li class="nav-item"><a class="nav-link" href="#">Trabajos</a></li>
-        <li class="nav-item"><a class="nav-link" href="#">Clientes</a></li>
-        <li class="nav-item"><a class="nav-link" href="#">Servicios</a></li>
-        <li class="nav-item"><a class="nav-link" href="#">Preguntas Frecuentes</a></li>
-        <li class="nav-item"><a class="nav-link" href="#">Contacto</a></li>
+        <li class="nav-item"><a class="nav-link" href="./index.html">Inicio</a></li>
+        <li class="nav-item"><a class="nav-link" href="./trabajos.html">Trabajos</a></li>
+        <li class="nav-item"><a class="nav-link" href="./empresas.html">Clientes</a></li>
+        <li class="nav-item"><a class="nav-link" href="./nuestro.html">Servicios</a></li>
+        <li class="nav-item"><a class="nav-link" href="./preguntas.html">Preguntas Frecuentes</a></li>
+        <li class="nav-item"><a class="nav-link" href="./formulario.html">Contacto</a></li>
       </ul>
     </div>
   </div>
 </nav>
+
 
 <!-- Título Nuestros Trabajos -->
 <div class="container mt-4" id="tituloo">
