--- a/empresas.html
+++ b/empresas.html
@@ -6,33 +6,36 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Nuestros Clientes</title>
   <link rel="stylesheet" href="./css/style.css">
+  <link rel="shortcut icon" href="./img/logo/loguito.png" type="image/x-icon">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    
 </head>
 
 <body id="bodyy">
 
   <!-- Barra de navegación -->
-<nav class="navbar navbar-expand-lg navbar-light fixed">
-  <div class="container">
-    <a class="navbar-brand" href="#">
-      <img src="./img/logo/loguito.png" alt="" srcset="">
-    </a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="navbar-collapse justify-content-end menucito collapse" id="navbarNav">
-      <ul class="navbar-nav">
-        <li class="nav-item"><a class="nav-link" href="./index.html">Inicio</a></li>
-        <li class="nav-item"><a class="nav-link" href="./trabajos.html">Trabajos</a></li>
-        <li class="nav-item"><a class="nav-link" href="./empresas.html">Clientes</a></li>
-        <li class="nav-item"><a class="nav-link" href="./nuestro.html">Servicios</a></li>
-        <li class="nav-item"><a class="nav-link" href="./">Preguntas Frecuentes</a></li>
-        <li class="nav-item"><a class="nav-link" href="./formulario.html">Contacto</a></li>
-      </ul>
+  <nav class="navbar navbar-expand-lg navbar-light fixed">
+    <div class="container">
+      <a class="navbar-brand" href="#">
+        <img src="./img/logo/loguito.png" alt="" srcset="">
+      </a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="navbar-collapse justify-content-end menucito collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item"><a class="nav-link" href="./index.html">Inicio</a></li>
+          <li class="nav-item"><a class="nav-link" href="./trabajos.html">Trabajos</a></li>
+          <li class="nav-item"><a class="nav-link" href="./empresas.html">Clientes</a></li>
+          <li class="nav-item"><a class="nav-link" href="./nuestro.html">Servicios</a></li>
+          <li class="nav-item"><a class="nav-link" href="./preguntas.html">Preguntas Frecuentes</a></li>
+          <li class="nav-item"><a class="nav-link" href="./formulario.html">Contacto</a></li>
+        </ul>
+      </div>
     </div>
-  </div>
-</nav>
+  </nav>
+  
 
 
   <section class="container">
@@ -51,7 +54,7 @@
         <img src="./img/empresas/fravega.png" id="imgrevelde1" class="img-fluid" alt="fravega">
       </div>
       <div class="col-md-2 col-sm-12 pt-3">
-        <img src="./img/empresas/fallabella.png" id="imgrevelde2 class="img-fluid" alt="fallabella">
+        <img src="./img/empresas/fallabella.png" id="imgrevelde2" class="img-fluid" alt="fallabella">
       </div>
       <div class="col-md-2 col-sm-12 pt-3">
         <img src="./img/empresas//gobierno.png" class="img-fluid" id="imgrevelde3" alt="gobierno">
