--- a/formulario.html
+++ b/formulario.html
@@ -5,12 +5,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="stylesheet" href="./css/style.css">
-  <title>Tu Sitio Web</title>
+  <title>Contacto</title>
   <!-- Enlace a Bootstrap CSS -->
+  <link rel="shortcut icon" href="./img/logo/loguito.png" type="image/x-icon">
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@200&family=Noto+Sans+JP:wght@500&display=swap" rel="stylesheet">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+<link rel="shortcut icon" href="./img/logo/loguito.png" type="image/x-icon">
 </head>
 <body id="bodyy">
 
@@ -29,7 +31,7 @@
         <li class="nav-item"><a class="nav-link" href="./trabajos.html">Trabajos</a></li>
         <li class="nav-item"><a class="nav-link" href="./empresas.html">Clientes</a></li>
         <li class="nav-item"><a class="nav-link" href="./nuestro.html">Servicios</a></li>
-        <li class="nav-item"><a class="nav-link" href="./">Preguntas Frecuentes</a></li>
+        <li class="nav-item"><a class="nav-link" href="./preguntas.html">Preguntas Frecuentes</a></li>
         <li class="nav-item"><a class="nav-link" href="./formulario.html">Contacto</a></li>
       </ul>
     </div>
@@ -37,8 +39,9 @@
 </nav>
 
 
+
 <!-- Título Nuestros Trabajos -->
-<div class="container mt-4" id="tituloo">
+<div class="container mt-4" id="titulooo">
   <h2 class="text-center text-uppercase title">ENVÍANOS TU CONSULTA</h2>
   <p>Te responderemos a la brevedad</p>
 </div>
