--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <li class="nav-item"><a class="nav-link" href="./trabajos.html">Trabajos</a></li>
         <li class="nav-item"><a class="nav-link" href="./empresas.html">Clientes</a></li>
         <li class="nav-item"><a class="nav-link" href="./nuestro.html">Servicios</a></li>
-        <li class="nav-item"><a class="nav-link" href="./">Preguntas Frecuentes</a></li>
+        <li class="nav-item"><a class="nav-link" href="./preguntas.html">Preguntas Frecuentes</a></li>
         <li class="nav-item"><a class="nav-link" href="./formulario.html">Contacto</a></li>
       </ul>
     </div>
