--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
         <li class="nav-item"><a class="nav-link" href="./empresas.html">Clientes</a></li>
         <li class="nav-item"><a class="nav-link" href="./nuestro.html">Servicios</a></li>
         <li class="nav-item"><a class="nav-link" href="./preguntas.html">Preguntas Frecuentes</a></li>
+        <li class="nav-item"><a class="nav-link" href="./historial.html">Historial</a></li>
         <li class="nav-item"><a class="nav-link" href="./formulario.html">Contacto</a></li>
       </ul>
     </div>
