--- a/trabajos.html
+++ b/trabajos.html
@@ -15,27 +15,28 @@
 </head>
 <body id="bodyy">
 
-<!-- Barra de navegación -->
-<nav class="navbar navbar-expand-lg navbar-light fixed">
-  <div class="container">
-    <a class="navbar-brand" href="#">
-      <img src="./img/logo/loguito.png" alt="" srcset="">
-    </a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="navbar-collapse justify-content-end menucito collapse" id="navbarNav">
-      <ul class="navbar-nav">
-        <li class="nav-item"><a class="nav-link" href="./index.html">Inicio</a></li>
-        <li class="nav-item"><a class="nav-link" href="./trabajos.html">Trabajos</a></li>
-        <li class="nav-item"><a class="nav-link" href="./empresas.html">Clientes</a></li>
-        <li class="nav-item"><a class="nav-link" href="./nuestro.html">Servicios</a></li>
-        <li class="nav-item"><a class="nav-link" href="./preguntas.html">Preguntas Frecuentes</a></li>
-        <li class="nav-item"><a class="nav-link" href="./formulario.html">Contacto</a></li>
-      </ul>
+
+  <nav class="navbar navbar-expand-lg navbar-light fixed">
+    <div class="container">
+      <a class="navbar-brand" href="#">
+        <img src="./img/logo/loguito.png" alt="" srcset="">
+      </a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="navbar-collapse justify-content-end menucito collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item"><a class="nav-link" href="./index.html">Inicio</a></li>
+          <li class="nav-item"><a class="nav-link" href="./trabajos.html">Trabajos</a></li>
+          <li class="nav-item"><a class="nav-link" href="./empresas.html">Clientes</a></li>
+          <li class="nav-item"><a class="nav-link" href="./nuestro.html">Servicios</a></li>
+          <li class="nav-item"><a class="nav-link" href="./preguntas.html">Preguntas Frecuentes</a></li>
+          <li class="nav-item"><a class="nav-link" href="./historial.html">Historial</a></li>
+          <li class="nav-item"><a class="nav-link" href="./formulario.html">Contacto</a></li>
+        </ul>
+      </div>
     </div>
-  </div>
-</nav>
+  </nav>
 
 
 <!-- Título Nuestros Trabajos -->
