--- a/nuestro.html
+++ b/nuestro.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  
     <title>Servicios</title>
     <link rel="stylesheet" href="./css/servicios.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -40,88 +41,63 @@
     <h2 class="text-center text-uppercase title">SERVICIOS QUE OFRECEMOS</h2>
     <p>Te presentamos los servicios profesionales que nuestros especialistas ofrecen a todo tipo de compañía.</p>
   </div>
-<div class="container mb-5">
-    <div id="myCarousel" class="carousel slide" data-ride="carousel">
-        <ol class="carousel-indicators">
-            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-            <li data-target="#myCarousel" data-slide-to="1"></li>
-            <li data-target="#myCarousel" data-slide-to="2"></li>
-            <li data-target="#myCarousel" data-slide-to="3"></li>
-            <li data-target="#myCarousel" data-slide-to="4"></li>
-            <li data-target="#myCarousel" data-slide-to="5"></li>
-            <li data-target="#myCarousel" data-slide-to="6"></li>
-            <li data-target="#myCarousel" data-slide-to="7"></li>
-        </ol>
 
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-                <img src="./img/servicios/pintor.jpg" class="d-block w-100 h-100" alt="...">
-                <div class="carousel-caption">
-                    <h5>Pintores profesionales</h5>
-                    <p>En pocos días, renovamos local comercial.</p>
-                </div>
-            </div>
-            <div class="carousel-item">
-                <img src="./img/servicios/imagen2.jpeg" class="d-block w-100" alt="...">
-                <div class="carousel-caption">
-                    <h4>Instalaciones electricas</h4>
-                    <p>Realizamos instalaciones generales, mantenimiento para locales comerciales</p>
-                </div>
-            </div>
-            <div class="carousel-item">
-                <img src="./img/servicios/imagen3.jpeg" class="d-block w-100" alt="...">
-                <div class="carousel-caption">
-                    <h4>Plomeria de alta calidad</h4>
-                    <p>Nuestra experiencia en instalaciones.</p>
-                </div>
-            </div>
-            <div class="carousel-item">
-                <img src="./img/servicios/bariro.jpg" class="d-block w-100" alt="...">
-                <div class="carousel-caption">
-                    <h4>Construcciones</h4>
-                    <p>Nuestros servicios abarcan la construccion de nuevos proyectos.</p>
-                </div>
-            </div>
-            <div class="carousel-item">
-                <img src="./img/servicios/imagen5.jpeg" class="d-block w-100" alt="...">
-                <div class="carousel-caption">
-                    <h4>Instalaciones de servicios</h4>
-                    <p>Puede contar con nuestro equipo para instalaciones de todo tipo.</p>
-                </div>
-            </div>
-            <div class="carousel-item">
-                <img src="./img/servicios/imagen6.jpeg" class="d-block w-100" alt="...">
-                <div class="carousel-caption">
-                    <h4>Mantenimiento de edificios</h4>
-                    <p>Mantenimiento de diferentes áreas como sanitaria y reformas en generales.</p>
-                </div>
-            </div>
-            <div class="carousel-item">
-                <img src="./img/servicios/higiene y seguridad.jfif" class="d-block w-100" alt="...">
-                <div class="carousel-caption">
-                    <h4>Higiene y seguridad
-                    </h4>
-                    <p>Protegemos la vida y el bienestar de los trabajadores. </p>
-                </div>
-            </div>
-            <div class="carousel-item">
-                <img src="./img/servicios/ARQUI.webp" class="d-block w-100" alt="...">
-                <div class="carousel-caption">
-                    <h4>Arquitectos especializados </h4>
-                    <p>Combinando la experiencia de planificación, diseño, gestión y construcción </p>
-                </div>
-            </div>
-        </div>
-        <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only"> </span>
-        </a>
-        <a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only"></span>
-        </a>
+  <div id="carouselExampleCaptions" class="carousel slide mt-5 mb-5">
+    <div class="carousel-indicators">
+      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3" aria-label="Slide 4"></button>
+      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="4" aria-label="Slide 5"></button>
+      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="5" aria-label="Slide 6"></button>
+      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="6" aria-label="Slide 7"></button>
     </div>
-</div>
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="./img/servicios/ARQUI.webp"  class="d-block w-100 img-fluid"  style="object-fit: cover; max-height: 380px;"  alt="...">
+        <div class="carousel-caption d-none d-md-block">
+          <h5>Arquitectos especializados</h5>
+          <p>Combinando la experiencia de planificación, diseño, gestión y construcción.</p>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img src="./img/servicios/higiene y seguridad.jfif" class="d-block w-100 img-fluid" style="object-fit: cover; max-height: 380px;" alt="...">
+        <div class="carousel-caption d-none d-md-block">
+          <h5>Higiene y seguridad</h5>
+          <p>Protegemos la vida y el bienestar de los trabajadores.</p>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img src="./img/servicios/bariro.jpg"  class="d-block w-100 img-fluid"  style="object-fit: cover; max-height: 380px;" alt="...">
+        <div class="carousel-caption d-md-block">
+          <h5>Construcciones</h5>
+          <p>Nuestros servicios abarcan la construcción de nuevos proyectos.</p>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img src="./img/servicios/imagen2.jpeg"  class="d-block w-100 img-fluid"  style="object-fit: cover; max-height: 380px;" alt="...">
+        <div class="carousel-caption d-none d-md-block">
+          <h5>Instalaciones eléctricas</h5>
+          <p>Realizamos instalaciones generales, mantenimiento para locales comerciales.</p>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img src="./img/servicios/imagen3.jpeg"  class="d-block w-100 img-fluid" style="object-fit: cover; max-height: 380px;" alt="...">
+        <div class="carousel-caption d-none d-md-block">
+          <h4>Fontanería de alta calidad</h4>
+          <p>Brindamos nuestros servicios con personas certificadas.</p>
+        </div>
+      </div>
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+  </div>
 
 <footer class="footer">
   <div class="container">
