--- a/nuestro.html
+++ b/nuestro.html
@@ -55,14 +55,14 @@
     <div class="carousel-inner">
       <div class="carousel-item active">
         <img src="./img/servicios/ARQUI.webp"  class="d-block w-100 img-fluid"  style="object-fit: cover; max-height: 380px;"  alt="...">
-        <div class="carousel-caption d-none d-md-block">
+        <div class="carousel-caption d-md-block">
           <h5>Arquitectos especializados</h5>
           <p>Combinando la experiencia de planificación, diseño, gestión y construcción.</p>
         </div>
       </div>
       <div class="carousel-item">
         <img src="./img/servicios/higiene y seguridad.jfif" class="d-block w-100 img-fluid" style="object-fit: cover; max-height: 380px;" alt="...">
-        <div class="carousel-caption d-none d-md-block">
+        <div class="carousel-caption d-md-block">
           <h5>Higiene y seguridad</h5>
           <p>Protegemos la vida y el bienestar de los trabajadores.</p>
         </div>
@@ -76,14 +76,14 @@
       </div>
       <div class="carousel-item">
         <img src="./img/servicios/imagen2.jpeg"  class="d-block w-100 img-fluid"  style="object-fit: cover; max-height: 380px;" alt="...">
-        <div class="carousel-caption d-none d-md-block">
+        <div class="carousel-caption d-md-block">
           <h5>Instalaciones eléctricas</h5>
           <p>Realizamos instalaciones generales, mantenimiento para locales comerciales.</p>
         </div>
       </div>
       <div class="carousel-item">
         <img src="./img/servicios/imagen3.jpeg"  class="d-block w-100 img-fluid" style="object-fit: cover; max-height: 380px;" alt="...">
-        <div class="carousel-caption d-none d-md-block">
+        <div class="carousel-caption d-md-block">
           <h4>Fontanería de alta calidad</h4>
           <p>Brindamos nuestros servicios con personas certificadas.</p>
         </div>
