error de escritura

--- a/nuestro.html
+++ b/nuestro.html
@@ -84,7 +84,7 @@
       <div class="carousel-item">
         <img src="./img/servicios/imagen3.jpeg"  class="d-block w-100 img-fluid" style="object-fit: cover; max-height: 380px;" alt="...">
         <div class="carousel-caption d-md-block">
-          <h4>Fontanería de alta calidad</h4>
+          <h4>Plomeria de alta calidad</h4>
           <p>Brindamos nuestros servicios con personas certificadas.</p>
         </div>
       </div>
