--- a/historial.html
+++ b/historial.html
@@ -6,14 +6,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Historial</title>
   <link rel="stylesheet" href="./css/style.css">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@200&family=Noto+Sans+JP:wght@500&display=swap" rel="stylesheet">
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-<link rel="shortcut icon" href="./img/logo/loguito.png" type="image/x-icon">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="shortcut icon" href="./img/logo/loguito.png" type="image/x-icon">
 </head>
 
-<body style="background-color: #FFE8CD;">
+<body id="bodyy">
   <nav class="navbar navbar-expand-lg navbar-light fixed">
     <div class="container">
       <a class="navbar-brand" href="#">
@@ -38,51 +38,54 @@
 
 
   <div class="container text-center mt-5 mb-5">
-    <h1>CANTIDAD DE OBRAS</h1>
-    <h6>Obras víales</h6>
+    <h1 style="font-family: 'Noto Sans JP', sans-serif;">CANTIDAD DE OBRAS</h1>
+    <div>
+      
+    </div>
+    <h6 class="left-align mt-3" >Obras víales</h6>
     <div class="progress" role="progressbar" aria-label="Example with label" aria-valuenow="10" aria-valuemin="0"
       aria-valuemax="100">
       <div class="progress-bar" style="width: 10%; background-color: #FFA333;">10%</div>
     </div>
 
-    <h6>Casas</h6>
+    <h6 class="left-align mt-3">Casas</h6>
     <div class="progress" role="progressbar" aria-label="Example with label" aria-valuenow="150" aria-valuemin="0"
       aria-valuemax="100">
       <div class="progress-bar" style="width: 100%; background-color: #FFA333;">100%</div>
     </div>
 
-    <h6>Estadios desporivos</h6>
+    <h6 class="left-align mt-3">Estadios deportivos</h6>
     <div class="progress" role="progressbar" aria-label="Example with label" aria-valuenow="20" aria-valuemin="0"
       aria-valuemax="100">
       <div class="progress-bar" style="width: 20%; background-color: #FFA333;">20%</div>
     </div>
 
-    <h6>Puentes</h6>
+    <h6 class="left-align mt-3">Puentes</h6>
     <div class="progress" role="progressbar" aria-label="Example with label" aria-valuenow="60" aria-valuemin="0"
       aria-valuemax="100">
       <div class="progress-bar" style="width: 60%; background-color: #FFA333;">60%</div>
     </div>
-    <h6>Edificios</h6>
+    <h6 class="left-align mt-3">Edificios</h6>
     <div class="progress" role="progressbar" aria-label="Example with label" aria-valuenow="185" aria-valuemin="0"
       aria-valuemax="100">
       <div class="progress-bar" style="width: 100%; background-color: #FFA333;">100%</div>
     </div>
-    <h6>Escuelas</h6>
+    <h6 class="left-align mt-3" >Escuelas</h6>
     <div class="progress" role="progressbar" aria-label="Example with label" aria-valuenow="45" aria-valuemin="0"
       aria-valuemax="100">
       <div class="progress-bar" style="width: 45%; background-color: #FFA333;">45%</div>
     </div>
-    <h6>Hospitales</h6>
+    <h6 class="left-align mt-3">Hospitales</h6>
     <div class="progress" role="progressbar" aria-label="Example with label" aria-valuenow="70" aria-valuemin="0"
       aria-valuemax="100">
       <div class="progress-bar" style="width: 70%; background-color: #FFA333;">70%</div>
     </div>
-    <h6>Plantas de energía</h6>
+    <h6 class="left-align mt-3">Plantas de energía</h6>
     <div class="progress" role="progressbar" aria-label="Example with label" aria-valuenow="3" aria-valuemin="0"
       aria-valuemax="100">
       <div class="progress-bar" style="width: 3%; background-color: #FFA333;">3%</div>
     </div>
-    <h6>Hoteles</h6>
+    <h6 class="left-align mt-3">Hoteles</h6>
     <div class="progress" role="progressbar" aria-label="Example with label" aria-valuenow="22" aria-valuemin="0"
       aria-valuemax="100">
       <div class="progress-bar" style="width: 22%; background-color: #FFA333;">22%</div>
@@ -95,18 +98,18 @@
         <!-- Redes Sociales -->
         <div class="col-md-12 text-center">
           <ul class="social-icons">
-            <li><a href="#"><img src="./img/redes/facebook.png" alt="Facebook"></a></li>
-            <li><a href="#"><img src="./img/redes/twitter.png" alt="twitter"></a></li>
-            <li><a href="#"><img src="./img/redes/linkedin.png" alt="LinkedIn"></a></li>
+            <li><a href="https://www.facebook.com/"><img src="./img/redes/facebook.png" alt="Facebook"></a></li>
+            <li><a href="https://twitter.com/home?lang=es"><img src="./img/redes/twitter.png" alt="twitter"></a></li>
+            <li><a href="https://www.linkedin.com/feed/"><img src="./img/redes/linkedin.png" alt="LinkedIn"></a></li>
           </ul>
           <div class="container text-center mt-3">
-            <p>&copy; 2023 Cadus. Todos los derechos reservados.</p>
+            <p>&copy; 2023 Todos los derechos reservados a Cadus.</p>
           </div>
         </div>
       </div>
-  </footer>
+  </footer>  
   
-
+  
 
 
   <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
