--- a/nuestro.html
+++ b/nuestro.html
@@ -105,9 +105,9 @@
       <!-- Redes Sociales -->
       <div class="col-md-12 text-center">
         <ul class="social-icons">
-          <li><a href="#"><img src="./img/redes/facebook.png" alt="Facebook"></a></li>
-          <li><a href="#"><img src="./img/redes/twitter.png" alt="twitter"></a></li>
-          <li><a href="#"><img src="./img/redes/linkedin.png" alt="LinkedIn"></a></li>
+          <li><a href="https://www.facebook.com/"><img src="./img/redes/facebook.png" alt="Facebook"></a></li>
+          <li><a href="https://twitter.com/home?lang=es"><img src="./img/redes/twitter.png" alt="twitter"></a></li>
+          <li><a href="https://www.linkedin.com/feed/"><img src="./img/redes/linkedin.png" alt="LinkedIn"></a></li>
         </ul>
         <div class="container text-center mt-3">
           <p>&copy; 2023 Todos los derechos reservados a Cadus.</p>
