--- a/empresas.html
+++ b/empresas.html
@@ -93,16 +93,22 @@
   </section>
 
   <footer class="footer">
-    <div class="container text-center">
-      <ul class="social-icons">
-        <li><a href="#"><img src="./img/redes/facebook.png" alt="Facebook"></a></li>
-        <li><a href="#"><img src="./img/redes/twitter.png" alt="twitter"></a></li>
-        <li><a href="#"><img src="./img/redes/linkedin.png" alt="LinkedIn"></a></li>
-      </ul>
-      <p>&copy; 2023 Todos los derechos reservados a Cadus.</p>
-    </div>
-  </footer>
-
+    <div class="container">
+      <div class="row">
+        <!-- Redes Sociales -->
+        <div class="col-md-12 text-center">
+          <ul class="social-icons">
+            <li><a href="https://www.facebook.com/"><img src="./img/redes/facebook.png" alt="Facebook"></a></li>
+            <li><a href="https://twitter.com/home?lang=es"><img src="./img/redes/twitter.png" alt="twitter"></a></li>
+            <li><a href="https://www.linkedin.com/feed/"><img src="./img/redes/linkedin.png" alt="LinkedIn"></a></li>
+          </ul>
+          <div class="container text-center mt-3">
+            <p>&copy; 2023 Todos los derechos reservados a Cadus.</p>
+          </div>
+        </div>
+      </div>
+  </footer>  
+  
   <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
