--- a/preguntas.html
+++ b/preguntas.html
@@ -183,17 +183,17 @@
         <!-- Redes Sociales -->
         <div class="col-md-12 text-center">
           <ul class="social-icons">
-            <li><a href="#"><img src="./img/redes/facebook.png" alt="Facebook"></a></li>
-            <li><a href="#"><img src="./img/redes/twitter.png" alt="twitter"></a></li>
-            <li><a href="#"><img src="./img/redes/linkedin.png" alt="LinkedIn"></a></li>
+            <li><a href="https://www.facebook.com/"><img src="./img/redes/facebook.png" alt="Facebook"></a></li>
+            <li><a href="https://twitter.com/home?lang=es"><img src="./img/redes/twitter.png" alt="twitter"></a></li>
+            <li><a href="https://www.linkedin.com/feed/"><img src="./img/redes/linkedin.png" alt="LinkedIn"></a></li>
           </ul>
           <div class="container text-center mt-3">
-            <p>&copy; 2023 Cadus. Todos los derechos reservados.</p>
+            <p>&copy; 2023 Todos los derechos reservados a Cadus.</p>
           </div>
         </div>
       </div>
-  </footer>
-
+  </footer>  
+  
 
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
