cambios de html

--- a/historial.html
+++ b/historial.html
@@ -44,8 +44,10 @@
     </p>
 
     <div class="progress-container">
-      <h6 id="izq">0</h6>
+      <div class="numeritos">
+        <h6 id="izq">0</h6>
       <h6 id="der">100</h6>
+      </div>
       <h6 class="left-align mt-3">Casas</h6>
       <div class="progress" role="progressbar" aria-label="Example with label" aria-valuenow="100">
         <div class="progress-bar casas-progress" style="background-color: #FFA333; font-size: 15px;">100</div>
@@ -78,8 +80,10 @@
     </div>
 
     <div class="progress-container mt-5">
-      <h6 id="izq">0</h6>
+      <div class="numeritos2">
+        <h6 id="izq">0</h6>
       <h6 id="der">60</h6>
+      </div>
 
       <h6 class="left-align mt-3">Obras víales</h6>
       <div class="progress" role="progressbar" aria-label="Example with label" aria-valuenow="40">
@@ -97,23 +101,40 @@
       </div>
     </div>
   </div>
-
-  <footer class="footer">
-    <div class="container">
+  <footer class="footer mt-auto ">
+    <div class="container-fluid">
       <div class="row">
         <!-- Redes Sociales -->
         <div class="col-md-12 text-center">
-          <ul class="social-icons">
-            <li><a href="https://www.facebook.com/"><img src="./img/redes/faceboook.png"  id="face" alt="Facebook"></a></li>
-            <li><a href="https://twitter.com/home?lang=es"><img src="./img/redes/twitter.png" id="twitter" alt="twitter"></a></li>
-            <li><a href="https://www.linkedin.com/feed/"><img src="./img/redes/linkedin.png" id="linkedin" alt="LinkedIn"></a></li>
+          <ul class="social-icons list-inline">
+            <li class="list-inline-item">
+              <a href="https://www.facebook.com/">
+                <img src="./img/redes/facebook.png" id="face" alt="Facebook" class="img-fluid" />
+              </a>
+            </li>
+            <li class="list-inline-item">
+              <a href="https://twitter.com/home?lang=es">
+                <img src="./img/redes/twitter.png" id="twitter" alt="Twitter" class="img-fluid" />
+              </a>
+            </li>
+            <li class="list-inline-item">
+              <a href="https://www.linkedin.com/feed/">
+                <img src="./img/redes/linkedin.png" id="linkedin" alt="LinkedIn" class="img-fluid" />
+              </a>
+            </li>
+            <li class="list-inline-item">
+              <a href="https://www.facebook.com/">
+                <img src="./img/redes/github.png" id="git" alt="github" class="img-fluid" />
+              </a>
+            </li>
           </ul>
           <div class="container text-center mt-3">
             <p>&copy; 2023 Todos los derechos reservados a Cadus.</p>
           </div>
         </div>
       </div>
-  </footer>  
+    </div>
+  </footer>
 
 
 
