--- a/nuestro.html
+++ b/nuestro.html
@@ -106,25 +106,40 @@
         </button>
     </div>
 
-    <footer class="footer">
-        <div class="container">
-            <div class="row">
-                <!-- Redes Sociales -->
-                <div class="col-md-12 text-center">
-                    <ul class="social-icons">
-                        <li><a href="https://www.facebook.com/"><img src="./img/redes/faceboook.png" id="face" alt="Facebook"></a></li>
-                        <li><a href="https://twitter.com/home?lang=es"><img src="./img/redes/twitter.png" id="twitter" alt="twitter"></a></li>
-                        <li><a href="https://www.linkedin.com/feed/"><img src="./img/redes/linkedin.png" id="linkedin" alt="LinkedIn"></a></li>
-                    </ul>
-                    <div class="container text-center mt-3">
-                        <p>&copy; 2023 Todos los derechos reservados a Cadus.</p>
-                    </div>
-                </div>
+    <footer class="footer mt-auto ">
+        <div class="container-fluid">
+          <div class="row">
+            <!-- Redes Sociales -->
+            <div class="col-md-12 text-center">
+              <ul class="social-icons list-inline">
+                <li class="list-inline-item">
+                  <a href="https://www.facebook.com/">
+                    <img src="./img/redes/facebook.png" id="face" alt="Facebook" class="img-fluid" />
+                  </a>
+                </li>
+                <li class="list-inline-item">
+                  <a href="https://twitter.com/home?lang=es">
+                    <img src="./img/redes/twitter.png" id="twitter" alt="Twitter" class="img-fluid" />
+                  </a>
+                </li>
+                <li class="list-inline-item">
+                  <a href="https://www.linkedin.com/feed/">
+                    <img src="./img/redes/linkedin.png" id="linkedin" alt="LinkedIn" class="img-fluid" />
+                  </a>
+                </li>
+                <li class="list-inline-item">
+                  <a href="https://www.facebook.com/">
+                    <img src="./img/redes/github.png" id="git" alt="github" class="img-fluid" />
+                  </a>
+                </li>
+              </ul>
+              <div class="container text-center mt-3">
+                <p>&copy; 2023 Todos los derechos reservados a Cadus.</p>
+              </div>
             </div>
+          </div>
         </div>
-    </footer>
-
-
+      </footer>
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
         integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
