--- a/empresas.html
+++ b/empresas.html
@@ -135,7 +135,7 @@
           <ul class="social-icons list-inline">
             <li class="list-inline-item">
               <a href="https://www.facebook.com/">
-                <img src="./img/redes/faceboook.png" id="face" alt="Facebook" class="img-fluid" />
+                <img src="./img/redes/facebook.png" id="face" alt="Facebook" class="img-fluid" />
               </a>
             </li>
             <li class="list-inline-item">
@@ -146,6 +146,11 @@
             <li class="list-inline-item">
               <a href="https://www.linkedin.com/feed/">
                 <img src="./img/redes/linkedin.png" id="linkedin" alt="LinkedIn" class="img-fluid" />
+              </a>
+            </li>
+            <li class="list-inline-item">
+              <a href="https://www.facebook.com/">
+                <img src="./img/redes/github.png" id="git" alt="github" class="img-fluid" />
               </a>
             </li>
           </ul>
