--- a/preguntas.html
+++ b/preguntas.html
@@ -5,9 +5,15 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Preguntas frecuentes</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@200&family=Noto+Sans+JP:wght@500&display=swap"
+      rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="shortcut icon" href="./img/logo/loguito.png" type="image/x-icon">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/preguntas.css">
     <link rel="shortcut icon" href="./img/logo/loguito.png" type="image/x-icon">
 </head>
 
@@ -178,23 +184,40 @@
 
   </div>
 
-  <footer class="footer">
-    <div class="container">
+  <footer class="footer mt-5">
+    <div class="container-fluid">
       <div class="row">
         <!-- Redes Sociales -->
         <div class="col-md-12 text-center">
-          <ul class="social-icons">
-            <li><a href="https://www.facebook.com/"><img src="./img/redes/faceboook.png"  id="face" alt="Facebook"></a></li>
-            <li><a href="https://twitter.com/home?lang=es"><img src="./img/redes/twitter.png" id="twitter" alt="twitter"></a></li>
-            <li><a href="https://www.linkedin.com/feed/"><img src="./img/redes/linkedin.png" id="linkedin" alt="LinkedIn"></a></li>
+          <ul class="social-icons list-inline">
+            <li class="list-inline-item">
+              <a href="https://www.facebook.com/">
+                <img src="./img/redes/facebook.png" id="face" alt="Facebook" class="img-fluid" />
+              </a>
+            </li>
+            <li class="list-inline-item">
+              <a href="https://twitter.com/home?lang=es">
+                <img src="./img/redes/twitter.png" id="twitter" alt="Twitter" class="img-fluid" />
+              </a>
+            </li>
+            <li class="list-inline-item">
+              <a href="https://www.linkedin.com/feed/">
+                <img src="./img/redes/linkedin.png" id="linkedin" alt="LinkedIn" class="img-fluid" />
+              </a>
+            </li>
+            <li class="list-inline-item">
+              <a href="https://www.facebook.com/">
+                <img src="./img/redes/github.png" id="git" alt="github" class="img-fluid" />
+              </a>
+            </li>
           </ul>
           <div class="container text-center mt-3">
             <p>&copy; 2023 Todos los derechos reservados a Cadus.</p>
           </div>
         </div>
       </div>
-  </footer>  
-  
+    </div>
+  </footer>
 
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
