--- a/historial.html
+++ b/historial.html
@@ -101,6 +101,7 @@
       </div>
     </div>
   </div>
+
   <footer class="footer mt-auto ">
     <div class="container-fluid">
       <div class="row">
@@ -123,7 +124,7 @@
               </a>
             </li>
             <li class="list-inline-item">
-              <a href="https://www.facebook.com/">
+              <a href="https://github.com/">
                 <img src="./img/redes/github.png" id="git" alt="github" class="img-fluid" />
               </a>
             </li>
