--- a/empresas.html
+++ b/empresas.html
@@ -149,7 +149,7 @@
               </a>
             </li>
             <li class="list-inline-item">
-              <a href="https://www.facebook.com/">
+              <a href="https://github.com/">
                 <img src="./img/redes/github.png" id="git" alt="github" class="img-fluid" />
               </a>
             </li>
@@ -161,6 +161,7 @@
       </div>
     </div>
   </footer>
+
 
   <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
