--- a/formulario.html
+++ b/formulario.html
@@ -101,40 +101,40 @@
 </div>
 
 
- <footer class="footer mt-auto ">
-    <div class="container-fluid">
-      <div class="row">
-        <!-- Redes Sociales -->
-        <div class="col-md-12 text-center">
-          <ul class="social-icons list-inline">
-            <li class="list-inline-item">
-              <a href="https://www.facebook.com/">
-                <img src="./img/redes/facebook.png" id="face" alt="Facebook" class="img-fluid" />
-              </a>
-            </li>
-            <li class="list-inline-item">
-              <a href="https://twitter.com/home?lang=es">
-                <img src="./img/redes/twitter.png" id="twitter" alt="Twitter" class="img-fluid" />
-              </a>
-            </li>
-            <li class="list-inline-item">
-              <a href="https://www.linkedin.com/feed/">
-                <img src="./img/redes/linkedin.png" id="linkedin" alt="LinkedIn" class="img-fluid" />
-              </a>
-            </li>
-            <li class="list-inline-item">
-              <a href="https://www.facebook.com/">
-                <img src="./img/redes/github.png" id="git" alt="github" class="img-fluid" />
-              </a>
-            </li>
-          </ul>
-          <div class="container text-center mt-3">
-            <p>&copy; 2023 Todos los derechos reservados a Cadus.</p>
-          </div>
+<footer class="footer mt-auto ">
+  <div class="container-fluid">
+    <div class="row">
+      <!-- Redes Sociales -->
+      <div class="col-md-12 text-center">
+        <ul class="social-icons list-inline">
+          <li class="list-inline-item">
+            <a href="https://www.facebook.com/">
+              <img src="./img/redes/facebook.png" id="face" alt="Facebook" class="img-fluid" />
+            </a>
+          </li>
+          <li class="list-inline-item">
+            <a href="https://twitter.com/home?lang=es">
+              <img src="./img/redes/twitter.png" id="twitter" alt="Twitter" class="img-fluid" />
+            </a>
+          </li>
+          <li class="list-inline-item">
+            <a href="https://www.linkedin.com/feed/">
+              <img src="./img/redes/linkedin.png" id="linkedin" alt="LinkedIn" class="img-fluid" />
+            </a>
+          </li>
+          <li class="list-inline-item">
+            <a href="https://github.com/">
+              <img src="./img/redes/github.png" id="git" alt="github" class="img-fluid" />
+            </a>
+          </li>
+        </ul>
+        <div class="container text-center mt-3">
+          <p>&copy; 2023 Todos los derechos reservados a Cadus.</p>
         </div>
       </div>
     </div>
-  </footer>
+  </div>
+</footer>
 
  
 <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
