--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
               </a>
             </li>
             <li class="list-inline-item">
-              <a href="https://www.facebook.com/">
+              <a href="https://github.com/">
                 <img src="./img/redes/github.png" id="git" alt="github" class="img-fluid" />
               </a>
             </li>
@@ -133,6 +133,7 @@
       </div>
     </div>
   </footer>
+
 
   <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
