--- a/preguntas.html
+++ b/preguntas.html
@@ -184,7 +184,7 @@
 
   </div>
 
-  <footer class="footer mt-5">
+  <footer class="footer mt-auto ">
     <div class="container-fluid">
       <div class="row">
         <!-- Redes Sociales -->
@@ -206,7 +206,7 @@
               </a>
             </li>
             <li class="list-inline-item">
-              <a href="https://www.facebook.com/">
+              <a href="https://github.com/">
                 <img src="./img/redes/github.png" id="git" alt="github" class="img-fluid" />
               </a>
             </li>
@@ -218,7 +218,6 @@
       </div>
     </div>
   </footer>
-
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
