--- a/trabajos.html
+++ b/trabajos.html
@@ -111,7 +111,7 @@
             </a>
           </li>
           <li class="list-inline-item">
-            <a href="https://www.facebook.com/">
+            <a href="https://github.com/">
               <img src="./img/redes/github.png" id="git" alt="github" class="img-fluid" />
             </a>
           </li>
