--- a/historial.html
+++ b/historial.html
@@ -80,6 +80,10 @@
     </div>
 
     <div class="progress-container mt-5">
+      <div class="numeritos">
+        <h6 id="izq">0</h6>
+      <h6 id="der">60</h6>
+      </div>
   
       <h6 class="left-align mt-3">Obras víales</h6>
       <div class="progress" role="progressbar" aria-label="Example with label" aria-valuenow="40">
