--- a/historial.html
+++ b/historial.html
@@ -80,7 +80,7 @@
     </div>
 
     <div class="progress-container mt-5">
-      <div class="numeritos">
+      <div class="numeritos2">
         <h6 id="izq">0</h6>
       <h6 id="der">60</h6>
       </div>
@@ -102,11 +102,11 @@
     </div>
   </div>
 
-  <footer class="footer mt-auto ">
+  <footer class="footer mt-5">
     <div class="container-fluid">
       <div class="row">
         <!-- Redes Sociales -->
-        <div class="col-md-12 text-center">
+        <div class="col-md-12 text-center mt-4 mb-4">
           <ul class="social-icons list-inline">
             <li class="list-inline-item">
               <a href="https://www.facebook.com/">
