--- a/formulario.html
+++ b/formulario.html
@@ -101,11 +101,11 @@
 </div>
 
 
-<footer class="footer mt-auto ">
+<footer class="footer mt-auto">
   <div class="container-fluid">
     <div class="row">
       <!-- Redes Sociales -->
-      <div class="col-md-12 text-center">
+      <div class="col-md-12 text-center mt-3">
         <ul class="social-icons list-inline">
           <li class="list-inline-item">
             <a href="https://www.facebook.com/">
@@ -136,7 +136,7 @@
   </div>
 </footer>
 
-<script src="./js/index.js"></script> 
+<script src="./js/index.js"></script>
 <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
