--- a/preguntas.html
+++ b/preguntas.html
@@ -47,11 +47,11 @@
 
         <h2>PREGUNTAS FRECUENTES</h2>
 
-        <p>Las construcciones para tu nuevo hogar requieren mucha planificación y no se deben incluir a la ligera, son tan
+        <h6 id="textt">Las construcciones para tu nuevo hogar requieren mucha planificación y no se deben incluir a la ligera, son tan
           grandes como se refiere a las mejoras. Entendemos que está obligado a tener un montón de preguntas antes de
           comenzar el proceso de diseño o construcción, por lo que hemos resumido algunas de nuestras preguntas más
           frecuentes para usted. Si tiene más preguntas o desea informarnos más sobre su proyecto, llame a nuestro
-          equipo al teléfono: 2644-639-787 o envíenos un correo electrónico a cadus@fcefn.com</p>
+          equipo al teléfono: 2644-639-787 o envíenos un correo electrónico a cadus@fcefn.com</h6>
 
       </div>
       <div class="col-md-6" id="imagen">
